Update Mee Kari Recipe description and image

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -7,5 +7,16 @@
 
     <body>
         <h1>Mee Kari</h1>
+
+        <img src="../pic/mee-kari.jpeg" alt="Scrumptious Mee Kari with prawn and boiled egg">
+
+        <h3>Description</h3>
+        <p>A very delicious recipe of Mee Kari (Curry Mee) from Malaysia 
+            and very popular amongst hawker's dish. Mee Kari is a dish
+            that full of flavours with slightly creamy soup infused
+            with coconut milk.
+        </p>
+
+        <h3>Ingredients</h3>
     </body>
 </html>
