Update Mee Kari Ingredients

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -18,5 +18,17 @@
         </p>
 
         <h3>Ingredients</h3>
+        <ul>
+            <li>500 g (17 oz.) prawns, steamed and shelled; <em>use the heads to sweeten 
+                the stock by liquidising them with 500ml water</em></li>
+            <li>3 to 4 pieces soaked cuttlefish heads</li>
+            <li>200 g (7 oz.) fried soya bean cubes/ tow pok, halved or quartered</li>
+            <li>300 g (10 oz.) shredded, cooked chicken meat</li>
+            <li>500 g (17 oz.) blanched bean sprouts</li>
+            <li>600 g (21 oz.) blanched yellow noodles</li>
+            <li>300 g (10 oz.) blanched vermicelli/rice sticks</li>
+            <li>1 kg (35 oz.) grated coconut, <em>mixed with 4 litres water and squeezed for the coconut milk to be used as main stock</em></li>
+            <li>600 g (21 oz.) shelled cockles/bloody clams, <strong>optional</strong></li>
+        </ul>
     </body>
 </html>
