Update Mee Kari Recipe Ingredient with Spices

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -30,5 +30,16 @@
             <li>1 kg (35 oz.) grated coconut, <em>mixed with 4 litres water and squeezed for the coconut milk to be used as main stock</em></li>
             <li>600 g (21 oz.) shelled cockles/bloody clams, <strong>optional</strong></li>
         </ul>
+
+        <h3>Spices (Finely Ground)</h3>
+        <ul>
+            <li>100 g (4 oz.)shallots</li>
+            <li>25 g (1 oz.) garlic</li>
+            <li>3 tablespoons coriander seeds</li>
+            <li>4 tablespoons chili paste</li>
+            <li>2 tablespoons lemongrass</li>
+            <li>10 peppercorns</li>
+            <li>1/2 tablespoon belacan, <em>Malaysian shrimp paste granules</em></li>
+        </ul>
     </body>
 </html>
