Change page title and add steps

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>SyahKhayy Odin Recipes</title>
+        <title>SyahKhayy Mee Kari Recipe</title>
     </head>
 
     <body>
@@ -22,7 +22,7 @@
             <li>500 g (17 oz.) prawns, steamed and shelled; <em>use the heads to sweeten 
                 the stock by liquidising them with 500ml water</em></li>
             <li>3 to 4 pieces soaked cuttlefish heads</li>
-            <li>200 g (7 oz.) fried soya bean cubes/ tow pok, halved or quartered</li>
+            <li>200 g (7 oz.) fried soya bean cubes/ tow pok, <em>halved or quartered</em></li>
             <li>300 g (10 oz.) shredded, cooked chicken meat</li>
             <li>500 g (17 oz.) blanched bean sprouts</li>
             <li>600 g (21 oz.) blanched yellow noodles</li>
@@ -41,5 +41,14 @@
             <li>10 peppercorns</li>
             <li>1/2 tablespoon belacan, <em>Malaysian shrimp paste granules</em></li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat 1/2 cup oil to saute the spices till fragrant.</li>
+            <li>Add in salt, rock sugar and 500ml general santan and bring to a low boil till sugar dissolves.</li>
+            <li> Add in the rest of the coconut milk, tow pok.</li>
+            <li>When soup comes to a boil, add prawn stock and seasoning, then bring to just boiling point.</li>
+            <li>Remove from fire and use stock as a soup for the yellow noodles and vermicelli.</li>
+        </ol>
     </body>
 </html>
