Change recipe list word size
Also add homepage button to navigate back from the recipes.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>SyahKhayy Odin Recipes</h1>
 
-        <a href="recipes/mee-kari.html">Mee Kari</a>
+        <h2><a href="recipes/mee-kari.html">Mee Kari</a></h2>
     </body>
 </html>
