--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -50,5 +50,7 @@
             <li>When soup comes to a boil, add prawn stock and seasoning, then bring to just boiling point.</li>
             <li>Remove from fire and use stock as a soup for the yellow noodles and vermicelli.</li>
         </ol>
+
+        <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
     </body>
 </html>
