Update Pie Tee Recipe with Steps
Bold and ittalic certain words in the description.

--- a/recipes/pie-tee.html
+++ b/recipes/pie-tee.html
@@ -11,13 +11,13 @@
         <img src="../pic/pie-tee.jpg" alt="Crunchy Pie Tee with green onion garnish">
 
         <h3>Description</h3>
-        <p>Kuih Pie Tee is made up of crispy thin pastry cups filled with sautéd jicama, 
+        <p><strong>Kuih Pie Tee</strong> is made up of crispy thin pastry cups filled with sautéd jicama, 
             omelet and fresh cucumber strips. Also known as top hat because of its shape, 
             it is one of the many popular Peranakan appetizers. It is crispy, savoury and 
             tastes amazing with chilli sauce.
         </p>
 
-        <p>‘Pai tee’ is a fun appetizer and is well known as a Peranakan dish. Shaped 
+        <p><strong>Pai Tee</strong> is a fun appetizer and is well known as a <em>Peranakan dish</em>. Shaped 
             like an overturned top hat, it is made up of fried crispy shells which use 
             a combination of wheat, rice and corn flour. Pai tee cups are filled with 
             stir-fried jicama and fresh vegetables. Besides looking beautiful, they are 
@@ -47,7 +47,20 @@
 
         <h3>Steps</h3>
         <ol>
-
+            <li>Remove the skin of yam bean and cut into strips.
+                Soak yam bean for at least 4 hours and then rinse to remove starch.</li>
+            <li>Heat oil in a pan over medium heat to stir-fry minced garlic and fermented bean paste until fragrant. 
+                Add prawns and continue stir-frying.</li>
+            <li>Add yam bean and tofu strips. To season, add a pinch of salt.</li>
+            <li>Add enough water to cover the ingredients, followed by soy sauce, dark soy sauce and sugar.</li>
+            <li>Mix well, reduce heat to minimum and simmer for at least an hour or until yam bean softens.</li>
+            <li>To prepare the cups, mix wheat flour, rice flour, cornflour and salt in a bowl. Then, add egg and water.</li>
+            <li>For a smooth batter, run it through a sieve. Set it aside for at least 30 minutes to 1 hour. Heat oil over low to medium heat.</li>
+            <li>Dip pie tee mould into the heated oil and then into the batter.</li>
+            <li>Immediately immerse it into the oil to fry until golden brown. Repeat the process.</li>
+            <li>Fry an omelette and cut into little cubes. Also, julienne cucumber, slice chillies and scallions as garnishing.</li>
+            <li>Fill pie tee cups with the stir-fried yam bean, fresh cucumber strips, chillies, scallions and omelette.</li>
+            <li>Top up with the chilli sauce of your choice.</li>
         </ol>
 
         <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
