--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <h2><a href="recipes/mee-kari.html">Mee Kari</a></h2>
             <h2><a href="recipes/pie-tee.html">Kuih Pie Tee</a></h2>
+            <h2><a href="recipes/nasi-lemak.html">Nasi Lemak</a></h2>
         </ul>
         
     </body>
