Add ingredients in Nasi Lemak recipes

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -19,6 +19,33 @@
 
         <h2>Ingredients</h2>
         <ul>
+            <li>2 cups coconut milk</li>
+            <li>2 cups water</li>
+            <li>1/4 teaspoon ground ginger</li>
+            <li>1 (1/2 inch) piece fresh ginger, <em>peeled and thinly sliced</em></li>
+            <li>salt to taste</li>
+            <li>1 whole bay leaf</li>
+            <li>2 cups long grain rice, <em>rinsed and drained</em></li>
+        </ul>
+        <h3>For The Garnish</h3>
+        <ul>
+            <li>4 eggs</li>
+            <li>1 cucumber</li>
+            <li>1 cup oil <em>for frying</em></li>
+            <li>1 cup raw peanuts</li>
+            <li>1 (4 ounce) package white anchovies,<em> washed</em></li>
+        </ul>
+        <h3>For The Sauce</h3>
+        <ul>
+            <li>2 tablespoons vegetable oil</li>
+            <li>1 medium onion, <em>sliced</em></li>
+            <li>3 cloves garlic, <em>thinly sliced</em></li>
+            <li>3 shallots, <em>thinly sliced</em></li>
+            <li>2 teaspoons chile paste</li>
+            <li>1 (4 ounce) package white anchovies, <em>washed</em></li>
+            <li>salt <em>to taste</em></li>
+            <li>3 tablespoons white sugar</li>
+            <li>¼ cup tamarind juice</li>
         </ul>
 
 
