--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -51,6 +51,15 @@
 
         <h2>Steps</h2>
         <ol>
+            <li>In a medium saucepan over medium heat, stir together coconut milk, water, ground ginger, ginger root, salt, bay leaf, and rice. Cover, and bring to a boil. Reduce heat, and simmer for 20 to 30 minutes, or until done.</li>
+            <li>Place eggs in a saucepan, and cover with cold water. Bring water to a boil, and immediately remove from heat. Cover, and let eggs stand in hot water for 10 to 12 minutes. Remove eggs from hot water, cool, peel and slice in half. Slice cucumber.
+            </li>
+            <li>Meanwhile, in a large skillet or wok, heat 1 cup vegetable oil over medium-high heat. Stir in peanuts and cook briefly, until lightly browned.</li>
+            <li> Remove peanuts with a slotted spoon and place on paper towels to soak up excess grease. Return skillet to stove. Stir in the contents of one package anchovies; cook briefly, turning, until crisp.</li>
+            <li> Remove with a slotted spoon and place on paper towels. Discard oil. Wipe out skillet.</li>
+            <li>Heat 2 tablespoons oil in the skillet. Stir in the onion, garlic, and shallots; cook until fragrant, about 1 or 2 minutes. Mix in the chile paste, and cook for 10 minutes, stirring occasionally. If the chile paste is too dry, add a small amount of water.</li>
+            <li> Stir in remaining anchovies; cook for 5 minutes. Stir in salt, sugar, and tamarind juice; simmer until sauce is thick, about 5 minutes.</li>
+            <li>Serve the onion and garlic sauce over the warm rice, and top with peanuts, fried anchovies, cucumbers, and eggs.</li>
         </ol>
 
         <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
