--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h2><a href="recipes/pie-tee.html">Kuih Pie Tee</a></h2>
             <h2><a href="recipes/nasi-lemak.html">Nasi Lemak</a></h2>
         </ul>
-        
+    
+        <h3>Webpages that created by Syahmi Khairul to complete Odin Project's assignment of HTML</h3>
     </body>
 </html>
