Add basic CSS into index

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>SyahKhayy Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body{
+                font-family: 'Courier New', Courier, monospace;
+            } 
+        </style>
     </head>
-
     <body>
-        <h1>SyahKhayy Odin Recipes</h1>
+        <h1 class="head title">SyahKhayy Odin Recipes</h1>
 
         <ul>
-            <h2><a href="recipes/mee-kari.html">Mee Kari</a></h2>
-            <h2><a href="recipes/pie-tee.html">Kuih Pie Tee</a></h2>
-            <h2><a href="recipes/nasi-lemak.html">Nasi Lemak</a></h2>
+            <div class="recipe" id="mee-kari"><a href="recipes/mee-kari.html">Mee Kari</a></div>
+            <div class="recipe" id="pie-tee"><a href="recipes/pie-tee.html">Kuih Pie Tee</a></div>
+            <div class="recipe" id="nasi-lemak"><a href="recipes/nasi-lemak.html">Nasi Lemak</a></div>
         </ul>
     
-        <h3>Webpages that created by Syahmi Khairul to complete Odin Project's assignment of HTML</h3>
+        <div class="footer">Webpages that created by Syahmi Khairul to complete Odin Project's assignment of HTML</div>
     </body>
 </html>
