Add CSS element to all recipes
make a change at main page to create some dynamic

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -3,21 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>SyahKhayy Mee Kari Recipe</title>
+        <link rel="stylesheet" href="../style.css">
+        <style>
+            body{
+                font-family: 'Courier New', Courier, monospace;
+            } 
+        </style>
     </head>
 
     <body>
-        <h1>Mee Kari</h1>
+        <h1 id="head">Mee Kari</h1>
 
-        <img src="../pic/mee-kari.jpeg" alt="Scrumptious Mee Kari with prawn and boiled egg">
+        <img src="../pic/mee-kari.jpeg" alt="Scrumptious Mee Kari with prawn and boiled egg" class="recipe photo">
 
-        <h2>Description</h2>
+        <h2 class="subsection">Description</h2>
         <p>A very delicious recipe of Mee Kari (Curry Mee) from Malaysia 
             and very popular amongst hawker's dish. Mee Kari is a dish
             that full of flavours with slightly creamy soup infused
             with coconut milk.
         </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="subsection">Ingredients</h2>
         <ul>
             <li>500 g (17 oz.) prawns, steamed and shelled; <em>use the heads to sweeten 
                 the stock by liquidising them with 500ml water</em></li>
@@ -31,7 +37,7 @@
             <li>600 g (21 oz.) shelled cockles/bloody clams, <strong>optional</strong></li>
         </ul>
 
-        <h2>Spices (Finely Ground)</h2>
+        <h2 class="subsection">Spices (Finely Ground)</h2>
         <ul>
             <li>100 g (4 oz.)shallots</li>
             <li>25 g (1 oz.) garlic</li>
@@ -42,7 +48,7 @@
             <li>1/2 tablespoon belacan, <em>Malaysian shrimp paste granules</em></li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class="subsection">Steps</h2>
         <ol>
             <li>Heat 1/2 cup oil to saute the spices till fragrant.</li>
             <li>Add in salt, rock sugar and 500ml general santan and bring to a low boil till sugar dissolves.</li>
@@ -51,6 +57,7 @@
             <li>Remove from fire and use stock as a soup for the yellow noodles and vermicelli.</li>
         </ol>
 
-        <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
+        <h3><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h3>
+        <h3><a href="#head"><strong>BACK TO TOP</strong></a></h3>
     </body>
 </html>
