--- a/recipes/pie-tee.html
+++ b/recipes/pie-tee.html
@@ -3,14 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>SyahKhayy Pie Tee Recipe</title>
+        <link rel="stylesheet" href="../style.css">
+        <style>
+            body{
+                font-family: 'Courier New', Courier, monospace;
+            } 
+        </style>
     </head>
 
     <body>
-        <h1>Pie Tee</h1>
+        <h1 id="head">Pie Tee</h1>
 
-        <img src="../pic/pie-tee.jpg" alt="Crunchy Pie Tee with green onion garnish">
+        <img src="../pic/pie-tee.jpg" alt="Crunchy Pie Tee with green onion garnish" class="recipe photo">
 
-        <h2>Description</h2>
+        <h2 class="subsection">Description</h2>
         <p><strong>Kuih Pie Tee</strong> is made up of crispy thin pastry cups filled with sautéd jicama, 
             omelet and fresh cucumber strips. Also known as top hat because of its shape, 
             it is one of the many popular Peranakan appetizers. It is crispy, savoury and 
@@ -23,7 +29,7 @@
             stir-fried jicama and fresh vegetables. Besides looking beautiful, they are 
             also very unique indeed.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="subsection">Ingredients</h2>
         <ul>
             <li>400 g yam bean <em>(jicama sengkuang)</em></li>
             <li>Half tablespoon oil</li>
@@ -45,7 +51,7 @@
             <li>quarter of cucumber</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class="subsection">Steps</h2>
         <ol>
             <li>Remove the skin of yam bean and cut into strips.
                 Soak yam bean for at least 4 hours and then rinse to remove starch.</li>
@@ -63,6 +69,7 @@
             <li>Top up with the chilli sauce of your choice.</li>
         </ol>
 
-        <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
+        <h3><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h3>
+        <h3><a href="#head"><strong>BACK TO TOP</strong></a></h3>
     </body>
 </html>
