--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -3,21 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>SyahKhayy Nasi Lemak Recipe</title>
+        <link rel="stylesheet" href="../style.css">
+        <style>
+            body{
+                font-family: 'Courier New', Courier, monospace;
+            } 
+        </style>
     </head>
 
     <body>
-        <h1>Nasi Lemak</h1>
+        <h1 id="head">Nasi Lemak</h1>
 
-        <img src="../pic/nasi-lemak.jpeg" alt="Creamy Nasi Lemak with sambal, anchovies and boiled egg">
+        <img src="../pic/nasi-lemak.jpeg" alt="Creamy Nasi Lemak with sambal, anchovies and boiled egg" class="recipe photo">
 
-        <h2>Description</h2>
+        <h2 class="subsection">Description</h2>
         <p>Delicious Malaysian coconut rice, served with anchovy hot 
             chile sauce, fried anchovies, fried peanut, sliced cucumber 
             or tomato and hard-boiled egg. If you do not have tamarind 
             juice, substitute with same amount of lemon juice.
         </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="subsection">Ingredients</h2>
         <ul>
             <li>2 cups coconut milk</li>
             <li>2 cups water</li>
@@ -27,7 +33,7 @@
             <li>1 whole bay leaf</li>
             <li>2 cups long grain rice, <em>rinsed and drained</em></li>
         </ul>
-        <h3>For The Garnish</h3>
+        <h3 class="small section">For The Garnish</h3>
         <ul>
             <li>4 eggs</li>
             <li>1 cucumber</li>
@@ -35,7 +41,7 @@
             <li>1 cup raw peanuts</li>
             <li>1 (4 ounce) package white anchovies,<em> washed</em></li>
         </ul>
-        <h3>For The Sauce</h3>
+        <h3 class="small section">For The Sauce</h3>
         <ul>
             <li>2 tablespoons vegetable oil</li>
             <li>1 medium onion, <em>sliced</em></li>
@@ -49,7 +55,7 @@
         </ul>
 
 
-        <h2>Steps</h2>
+        <h2 class="subsection">Steps</h2>
         <ol>
             <li>In a medium saucepan over medium heat, stir together coconut milk, water, ground ginger, ginger root, salt, bay leaf, and rice. Cover, and bring to a boil. Reduce heat, and simmer for 20 to 30 minutes, or until done.</li>
             <li>Place eggs in a saucepan, and cover with cold water. Bring water to a boil, and immediately remove from heat. Cover, and let eggs stand in hot water for 10 to 12 minutes. Remove eggs from hot water, cool, peel and slice in half. Slice cucumber.
@@ -62,6 +68,7 @@
             <li>Serve the onion and garlic sauce over the warm rice, and top with peanuts, fried anchovies, cucumbers, and eggs.</li>
         </ol>
 
-        <h2><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h2>
+        <h3><a href="../index.html"><strong>BACK TO HOMEPAGE</strong></a></h3>
+        <h3><a href="#head"><strong>BACK TO TOP</strong></a></h3>
     </body>
 </html>
